slight tweeks to html to make it render correctly on small screens

--- a/html/stylesheet.css
+++ b/html/stylesheet.css
@@ -50,6 +50,15 @@ a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 30px 0;
+}
+
+.cont-main-newparty {
+  padding-top: 50px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .cont-main {
